# ChangeLog for sys-apps/psmisc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/psmisc/ChangeLog,v 1.17 2003/06/24 14:32:06 agriffis Exp $

  24 Jun 2003; Aron Griffis <agriffis@gentoo.org> psmisc-21.2-r2.ebuild:
  Mark stable on alpha

*psmisc-21.2-r2 (19 May 2003)

  22 Jun 2003; Joshua Kinard <kumba@gentoo.org> psmisc-21.2-r2.ebuild:
  Changed ~sparc & ~mips to sparc & mips

  19 May 2003; Martin Schlemmer <azarah@gentoo.org> psmisc-21.2-r2.ebuild,
  files/psmisc-21.2-gcc33.patch:
  Fix gcc-3.3 compile issues, bug #21212.

*psmisc-21.2-r1 (20 Mar 2003)

  25 Mar 2003; Joshua Brindle <method@gentoo.org> psmisc-21.2-r1.ebuild:
  added selinux support, thanks sindian

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> psmisc-19-r3.ebuild,
  psmisc-19-r3.ebuild, psmisc-21.2-r1.ebuild:
  removed pic cruft

*psmisc-21.2 (19 Nov 2002)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> psmisc-19-r3.ebuild,
  psmisc-19-r3.ebuild, psmisc-21.2.ebuild:
  removed pic cruft

  24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> psmisc-21.2.ebuild :
  Marked as stable for mips.

  20 Feb 2003; Zach Welch <zwelch@gentoo.org> psmisc-21.2.ebuild :
  Added arm to keywords.

  09 Feb 2003; Guy Martin <gmsoft@gentoo.org> psmisc-21.2.ebuild :
  Added hppa to keywords.

  01 Jan 2003; Mike Frysinger <vapier@gentoo.org> :
  Unmasked KEYWORDS for all arch's

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Version bump, enhancements, change to use psmisc source

*psmisc-19-r3 (1 Feb 2002)

  24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> psmisc-19-r3.ebuild :
  Marked as stable for mips.

  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> psmisc-19-r3.ebuild :

  Sed delimiters are now : instead of /, closing bug #15006 by Blu3
  <david+gentoo.org@blue-labs.org>

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Removed bootcd USE flag

  14 Jul 2002; phoen][x <phoenix@gentoo.org> psmisc-19-r3.ebuild :