@@ -1,8 +1,8 @@
-MD5 a5b2c968e238a388ece55328476d3193 ChangeLog 4923
+MD5 b52118ddf230bfd25c8db6162d1b81cd ChangeLog 5015
 MD5 2b03afcd211d337e1e166268c3760c2a sed-4.0.5-r1.ebuild 1090
 MD5 ba0b9f0ba5823c4d446182ac170d12b2 sed-4.0.5.ebuild 962
 MD5 29af44d33f46c213903ecdf7f3e50a16 sed-4.0.6.ebuild 1160
-MD5 58bafe686400941f9bf7786e2c311cc9 sed-4.0.7.ebuild 1157
+MD5 933f2bff1097996b5de79a1e15d56846 sed-4.0.7.ebuild 1157
 MD5 9b3e86e395686a7671a545d114aa2dd2 files/digest-sed-4.0.5 61
 MD5 9b3e86e395686a7671a545d114aa2dd2 files/digest-sed-4.0.5-r1 61
 MD5 f13587e662841cb7a5b46170aaf85d1e files/digest-sed-4.0.6 61
