@@ -1,12 +1,12 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/sed-4.0.7.ebuild,v 1.6 2003/07/06 09:16:59 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/sed-4.0.7.ebuild,v 1.7 2003/07/06 14:52:10 gmsoft Exp $
 
 DESCRIPTION="Super-useful stream editor"
 SRC_URI="ftp://ftp.gnu.org/pub/gnu/sed/${P}.tar.gz"
 HOMEPAGE="http://www.gnu.org/software/sed/sed.html"
 
-KEYWORDS="x86 amd64 ~ppc sparc alpha ~hppa ~arm mips"
+KEYWORDS="x86 amd64 ~ppc sparc alpha hppa ~arm mips"
 SLOT="0"
 LICENSE="GPL-2"
 IUSE="nls static build"
