@@ -1,9 +1,12 @@
 # ChangeLog for sys-apps/sed
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/ChangeLog,v 1.34 2003/07/06 09:16:59 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/ChangeLog,v 1.35 2003/07/06 14:52:10 gmsoft Exp $
 
 
 *sed-4.0.7 (11 Apr 2003)
+
+  06 Jul 2003; Guy Martin <gmsoft@gentoo.org> sed-4.0.7.ebuild :
+  Marked stable on hppa.
 
   06 Jul 2003; Joshua Kinard <kumba@gentoo.org> sed-4.0.7.ebuild:
   Changed ~mips to mips in KEYWORDS
